@@ -77,7 +77,7 @@ public class ConfigurationFactory {
             errors.append("\n\t* ").append(throwable.getMessage());
             LOGGER.error("Configuration Error found", throwable);
           }
-          throw new Error(errors.toString(), validate.get(0));
+          throw new Error(errors.toString(), validate.getFirst());
         }
       }
       return config;
