@@ -51,7 +51,7 @@ public class ConfigFileResolvingHttpRequestFactoryTest extends AbstractMapfishSp
         new ConfigFileResolvingHttpRequestFactory(
             this.requestFactory,
             config,
-            new HashMap<String, String>(),
+            new HashMap<>(),
             HTTP_REQUEST_MAX_NUMBER_FETCH_RETRY,
             HTTP_REQUEST_FETCH_RETRY_INTERVAL_MILLIS);
   }
@@ -83,7 +83,7 @@ public class ConfigFileResolvingHttpRequestFactoryTest extends AbstractMapfishSp
   }
 
   private String getExpected() throws IOException {
-    return new String(Files.readAllBytes(logbackXml.toPath()), Constants.DEFAULT_CHARSET);
+    return Files.readString(logbackXml.toPath(), Constants.DEFAULT_CHARSET);
   }
 
   @Test
@@ -96,11 +96,7 @@ public class ConfigFileResolvingHttpRequestFactoryTest extends AbstractMapfishSp
 
     uri = logbackXml.toURI();
     final ClientHttpRequest request2 = resolvingFactory.createRequest(uri, HttpMethod.POST);
-    assertThrows(
-        IllegalFileAccessException.class,
-        () -> {
-          request2.execute();
-        });
+    assertThrows(IllegalFileAccessException.class, request2::execute);
   }
 
   @Test
@@ -116,11 +112,7 @@ public class ConfigFileResolvingHttpRequestFactoryTest extends AbstractMapfishSp
     uri = logbackXml.toURI();
     ClientHttpRequest request2 = resolvingFactory.createRequest(uri, HttpMethod.GET);
     request2.getBody().write(new byte[] {1, 2, 3});
-    assertThrows(
-        IllegalFileAccessException.class,
-        () -> {
-          request2.execute();
-        });
+    assertThrows(IllegalFileAccessException.class, request2::execute);
   }
 
   @Test
