@@ -44,7 +44,7 @@ public class SetFeaturesProcessorTest extends AbstractMapfishSpringTest {
     PJsonObject requestData = loadJsonRequestData();
     Values values =
         new Values(
-            new HashMap<String, String>(),
+            new HashMap<>(),
             requestData,
             template,
             getTaskDirectory(),
@@ -61,6 +61,6 @@ public class SetFeaturesProcessorTest extends AbstractMapfishSpringTest {
     assertEquals(1, layerGraphics.size());
 
     new ImageSimilarity(getFile(BASE_DIR + "expectedSimpleImage.png"))
-        .assertSimilarity(new File(layerGraphics.get(0)), 0);
+        .assertSimilarity(new File(layerGraphics.getFirst()), 0);
   }
 }
