@@ -2,6 +2,8 @@ package org.mapfish.print.servlet;
 
 import java.io.File;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import org.mapfish.print.config.S3ReportStorage;
 
@@ -15,10 +17,10 @@ public class TestS3ReportStorage extends S3ReportStorage {
       final String mimeType,
       final File file) {
     try {
-      return new URL(
-          String.format(
-              "https://example.com/%s/%s", getBucket(), getKey(ref, filename, extension)));
-    } catch (MalformedURLException e) {
+      String spec =
+          String.format("https://example.com/%s/%s", getBucket(), getKey(ref, filename, extension));
+      return URL.of(new URI(spec), null);
+    } catch (MalformedURLException | URISyntaxException e) {
       throw new RuntimeException(e);
     }
   }
